list css UI change

--- a/contact_list/Views/home.ejs
+++ b/contact_list/Views/home.ejs
@@ -15,7 +15,7 @@
                 <ul>
                     <% for (let i of contact_list) { %>
                         <li class="container">
-                                <div class="content">
+                                <div class="content" style="display: flex; justify-content: space-between; padding: 0 5px 0 5px;">
                                     <p class="item"><%= i.name %></p>
                                     <p class="item"><%= i.phone %></p>
                             </div>
